# konzistence_monras

./: .gitignore  README.md  pyproject.toml  run.py
app/: MRS_Viewer_Design.md  MRS_Viewer_Minimal.md  __init__.py  app.py  config.py  config.yaml  ids.py  layout.py  main.py  server.py  stats.py
app/assets/: slider_tooltip.js  styles.css
app/callbacks/: __init__.py  chart_callbacks.py  filter_callbacks.py  filters.py  main_content.py  outlier_callbacks.py  reference.py  routing.py  selection.py  side_charts.py  status_log.py  suspicious.py  upload_callbacks.py
app/charts/: __init__.py  base_chart.py  crossfilter.py  histogram_chart.py  scatter_chart.py  time_series_chart.py
app/components/: __init__.py  data_table.py  file_upload.py  filter_panel.py  stat_cards.py
app/layouts/: __init__.py  analysis_page.py  main_layout.py  outliers_page.py  upload_page.py
app/pages/: __init__.py  config_editor.py  docs.py  home.py
app/services/: __init__.py  data_store.py  outlier_detection.py  statistics.py
app/utils/: __init__.py  excel_reader.py
docs/: MRS_Viewer_Manual.md
r_scripts/: aerosoly.R  boruvky_brusinky.R  houby.R  kaly.R  krmiva bez sena.R  lesni_plody.R  lesni_plody_ostatni.R  maso.R  med.R  mleko_konzumni.R  mleko_surove.R  mleko_susene.R  obiloviny.R  okopaniny.R  ovoce.R  pitna_voda.R  povrchova_voda.R  puda.R  rost_indikatory.R  ryby.R  sedimenty.R  seno_senaz.R  smisena_strava.R  spady.R  voda_podzemni.R  vyrobky bez medu.R  xx_krmiva.R  xx_vyrobky.R  zelenina.R  zverina.R
sql_import/: README.md  analyze_db.py  config.yaml  find_extreme_values.py  import_problems.txt  normalize_db.py  show_columns.py  xlsx_to_sqlite.py
sql_import/monras_etl/: config.py  datetime_parse.py  header_detect.py  import_logger.py  naming.py  schema.py  sqlite_io.py
